--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 :root {
@@ -14,6 +16,13 @@
 
 body {
   font-family: "Spartan", sans-serif;
+  font-weight: 700;
+}
+
+.App {
+  min-height: 100vh;
+  background-color: var(--background);
+  padding: 1px 0;
 }
 
 .JobsList {
@@ -27,31 +36,94 @@ body {
   padding: 25px 32px;
   margin-bottom: 20px;
   align-items: center;
-  border: 2px solid black;
+  border-radius: 5px;
+  box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 
 .job__info {
   display: flex;
   margin-left: 20px;
   flex-direction: column;
+  justify-content: center;
 }
 
 .job__info--header {
   display: flex;
+  margin-bottom: 10px;
 }
 
 .job__info__company__name {
-  margin-right: 20px;
+  margin-right: 15px;
   font-size: 15px;
   font-weight: 700;
   color: var(--dark-cyan);
 }
 
+.job__info--new {
+  font-size: 14px;
+  background-color: var(--dark-cyan);
+  color: white;
+  padding: 3px 5px;
+  margin-right: 10px;
+  padding-bottom: 0px;
+  border-radius: 10px;
+}
+
+.job__info--featured {
+  font-size: 14px;
+  background-color: var(--text-color);
+  color: white;
+  padding: 3px 5px;
+  border-radius: 10px;
+  padding-bottom: 0px;
+}
+
+.job__info--title {
+  font-size: 20px;
+  color: var(--text-color);
+  margin-bottom: 10px;
+}
+
 .job__info--footer {
   display: flex;
+  font-size: 13px;
+  color: var(--gray-text);
+  font-weight: 500;
+}
+
+.job__info--time,
+.job__info--duration {
+  margin-right: 30px;
 }
 
 .filters {
   display: flex;
   margin-left: auto;
+}
+
+.job__info__filter__item {
+  font-size: 12px;
+  padding: 8px 8px;
+  margin-left: 15px;
+  border-radius: 5px;
+  background-color: var(--filter-tablet);
+  color: var(--dark-cyan);
+}
+
+.FiltersBar {
+  margin: 40px 160px;
+  display: flex;
+  padding: 20px 40px;
+  background-color: #fff;
+  box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.2);
+}
+
+.FilterItem {
+  font-size: 12px;
+  padding: 8px 8px;
+  margin-left: 15px;
+  border-radius: 5px;
+  background-color: var(--filter-tablet);
+  color: var(--dark-cyan);
 }
