--- a/src/components/App.css
+++ b/src/components/App.css
@@ -22,7 +22,8 @@ body {
 .App {
   min-height: 100vh;
   background-color: var(--background);
-  padding: 0px 0;
+  padding: 0px 0px 25px;
+  position: relative;
 }
 
 .App-header {
@@ -38,7 +39,7 @@ body {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   padding: 0px 160px;
-  margin-top: 80px;
+  margin: 80px 0px 0;
 }
 
 .JobCard {
@@ -49,6 +50,10 @@ body {
   border-radius: 5px;
   box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.2);
   background-color: #fff;
+}
+
+.JobCard__borderleft {
+  border-left: 5px solid var(--dark-cyan);
 }
 
 .job__info {
@@ -183,4 +188,12 @@ body {
 
 .fa-times:hover {
   background-color: var(--text-color);
+}
+
+.footer {
+  position: absolute;
+  bottom: 10px;
+  left: 45%;
+  text-align: center;
+  font-size: 13px;
 }
